--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,41 @@
 
 /* Your CSS Code here. */
+h1{
+    text-align: center;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  input[type="submit"]{
+    width: 300px;
+    height: 50px;
+    font-size: larger;
+    border-radius: 5px;
+    border: none;
+    background-color: dodgerblue;
+    margin-top: 20px;
+  }
+  input[type="text"]{
+    border: 1px solid dodgerblue;
+  }
+  tr{
+    height: 60px;
+  }
+  .div{
+    margin-left: auto;
+    margin-right: auto;
+    width: 70vw;
+    background-color: lightblue;
+    padding: 30px;
+    border-radius: 10px;
+    color: black;
+  }
+  label {
+    font-size: large;
+  }
+  input[type="submit"]:hover{
+    background-color: coral;
+    border: 1px solid black;
+  }
