--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,11 @@ h1{
   tr{
     height: 60px;
   }
+input[type="checkbox"]{
+		width:20px;
+		height:30px;
+	
+}
   .div{
     margin-left: auto;
     margin-right: auto;
